<resources>
    <string name="app_name">My App Portafolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="by_anncode">By @anncode</string>
    <string name="toast_spotify_launch">This Button will launch Spotify Streamer</string>
    <string name="toast_scores_app_launch">This Button will launch Scores App</string>
    <string name="toast_library_app_launch">This Button will launch Library App</string>
    <string name="toast_build_it_bigger_launch">This Button will launch Build It Bigger</string>
    <string name="toast_xyz_reader_launch">This Button will launch XYZ Reader</string>
    <string name="toast_capstone_my_own_app_launch">This Button will launch Capstone: My Own App</string>

</resources>
