<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView
                android:id="@+id/tv_title"
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/text_title"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_buttons_horizontal"
                android:paddingRight="@dimen/padding_buttons_horizontal"
                android:paddingTop="@dimen/padding_buttons_vertical"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/btn_spotify_streamer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spotify_streamer"
                    android:background="@color/accent"
                    android:layout_gravity="center_vertical"
                    android:onClick="spotifyStreamer"
                    />

                <Button
                    android:id="@+id/btn_scores_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scores_app"
                    android:background="@color/accent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="scoresApp"
                    />

                <Button
                    android:id="@+id/btn_library_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/library_app"
                    android:background="@color/accent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="libraryApp"
                    />

                <Button
                    android:id="@+id/btn_build_it_bigger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/build_it_bigger"
                    android:background="@color/accent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="buildItBigger"
                    />

                <Button
                    android:id="@+id/btn_xyz_reader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/xyz_reader"
                    android:background="@color/accent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="xyzReader"
                    />

                <Button
                    android:id="@+id/btn_capstone_my_own_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/capstone_my_own_app"
                    android:background="@color/accent_two"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:onClick="capstoneMyOwnApp"
                    />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>
    <TextView
        android:id="@+id/tv_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_anncode"
        android:textSize="@dimen/text_small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />


</RelativeLayout>
